logging and test class added

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -155,6 +155,19 @@
 			</div>
 		</div>
 	</div>
+	<!-- Error Modal HTML -->
+	<div id="errorModal" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<form>
+					<div class="modal-body">
+						<p>An error occurred please try again later</p>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
 
 </body>
 </html>
